2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Document Gnuplot commands.
	* include/roboptim/core/visualization/gnuplot-commands.hh: Here.

2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>

	More documentation.
	* include/roboptim/core/derivable-function.hh,
	* include/roboptim/core/function.hh,
	* include/roboptim/core/generic-solver.hh,
	* include/roboptim/core/problem.hh,
	* include/roboptim/core/problem.hxx,
	* include/roboptim/core/solver-error.hh,
	* include/roboptim/core/solver-factory.hh,
	* include/roboptim/core/solver-warning.hh,
	* include/roboptim/core/solver.hh,
	* include/roboptim/core/util.hh:
	Document and clean.

2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Document and clean interfaces.
	* include/roboptim/core/derivable-function.hh,
	* include/roboptim/core/finite-difference-gradient.hh,
	* include/roboptim/core/freeze.hh,
	* include/roboptim/core/function.hh,
	* include/roboptim/core/fwd.hh,
	* include/roboptim/core/indent.hh,
	* include/roboptim/core/result-with-warnings.hh,
	* include/roboptim/core/result.hh,
	* include/roboptim/core/twice-derivable-function.hh:
	Document the code, clean the interface.

2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Add tests to Doxygen EXAMPLE_PATH.
	* doc/Doxyfile.in: Here.

2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix typo.
	* include/roboptim/core/twice-derivable-function.hh: Fix typo.

2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Add more documentation.
	* include/roboptim/core/derivable-function.hh,
	* include/roboptim/core/function.hh: Add missing
	documentation and normalize some descriptions.
	* include/roboptim/core/twice-derivable-function.hh:
	Document all types, methods, classes.

2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Add more documentation.
	* include/roboptim/core/derivable-function.hh: Document
	gradient/jacobian management when output size is larger
	than one.